--- a/assets/stylesheets/less/partials/monitor.less
+++ b/assets/stylesheets/less/partials/monitor.less
@@ -130,9 +130,9 @@
                         .text {
                             .font(@color: @color-white);
                             text-shadow: 1px 1px #555555;
-                        } 
+                        }
                     }
-                        
+
                 }
 
                 .icon {
@@ -282,7 +282,7 @@
                                 .font(@size: 11px, @weight: 500);
 
                             }
-                        } 
+                        }
                     }
                 }
 
@@ -319,10 +319,10 @@
                     opacity: 0.2;
                     stroke-width: 0;
                     &.area0 {
-                        fill: #6DCFF6; 
+                        fill: #6DCFF6;
                     }
                     &.area1 {
-                        fill: #90C591; 
+                        fill: #90C591;
                     }
 
                     &.highlighted {
@@ -366,7 +366,7 @@
                         .vertical-align;
                         float: right;
                     }
-                    
+
                     #connectionInfo {
                         float: left;
                         .textOverflowOneLine;
@@ -482,7 +482,7 @@
                                 position: relative;
                                 top: -5px;
                             }
-                            
+
                         }
 
                         .totalSize {
@@ -564,10 +564,10 @@
 
                     .statsTopHeading {
                         .font(@weight: 600, @size: 11px, @color: @color-text-midlightGray);
-                        .size(@width: 245px, @height: 20px);
+                        .size(@max-width: 245px, @height: 20px);
                         margin: 0 auto;
                         padding: 2px 12px 0px 2px;
-                        
+
                         .global {
                             float: left;
                         }
@@ -647,7 +647,7 @@
                             width: 100%;
                             max-width: 245px;
                             margin: 0 auto;
-                            
+
                             li {
                                 .font(@size: 11px, @color: @color-text-midlightGray, @weight: bold);
                                 .size(@width: 100%, @max-width: 225px, @height: 17px);
@@ -677,7 +677,7 @@
         }
 
         .c3-chart-arc path {
-            stroke: none; 
+            stroke: none;
         }
         .c3 line, .c3 path {
             fill: none;
@@ -879,7 +879,7 @@
             .titleSection {
                 .flex(0 0 50px);
             }
-        
+
             .statusSection {
                 .flex(0 0 100px);
                 margin-bottom: 5px;
@@ -940,7 +940,7 @@
                     .size(@width: 100%, @height: ~"calc(100% - 20px)");
                     background-color: @color-white;
                     box-shadow: inset 0px 2px 2px 1px rgba(0,0,0,0.2);
-                
+
                     .sqlWrap {
                         .size(@width: 100%, @height: 100%);
                         .position(relative, @top: 3px, @left: 2px);
